update post 1000 exercise

--- a/_posts/2021-11-17-1000-exercise.md
+++ b/_posts/2021-11-17-1000-exercise.md
@@ -50,6 +50,248 @@ gdfg
 
 
 ## Example
+
+gdfg
+
+
+gdfg
+
+gdfg
+
+
+gdfg
+
+
+
+
+
+
+
+
+gdfg
+
+gdfg
+
+
+gdfg
+
+gdfg
+
+
+gdfg
+
+
+
+
+
+
+
+
+gdfg
+
+
+gdfg
+
+
+gdfg
+
+gdfg
+
+
+gdfg
+
+
+
+
+
+
+
+
+gdfg
+
+
+gdfg
+
+
+gdfg
+
+gdfg
+
+
+gdfg
+
+
+
+
+
+
+
+
+gdfg
+
+
 ## Example2
+
+
+gdfg
+
+
+gdfg
+
+gdfg
+
+
+gdfg
+
+
+
+
+
+
+
+
+gdfg
+
+
+gdfg
+
+
+gdfg
+
+gdfg
+
+
+gdfg
+
+
+
+
+
+
+
+
+gdfg
+
+
+gdfg
+
+
+gdfg
+
+gdfg
+
+
+gdfg
+
+
+
+
+
+
+
+
+gdfg
+
+
 ## Third Example
+
+gdfg
+
+
+gdfg
+
+gdfg
+
+
+gdfg
+
+
+
+
+
+
+
+
+gdfg
+
+
+gdfg
+
+
+gdfg
+
+gdfg
+
+
+gdfg
+
+
+
+
+
+
+
+
+gdfg
+
+
+gdfg
+
+
+gdfg
+
+gdfg
+
+
+gdfg
+
+
+
+
+
+
+
+
+gdfg
+
+
 ## [Fourth Example](http://www.fourthexample.com) 
+
+gdfg
+
+
+gdfg
+
+gdfg
+
+
+gdfg
+
+
+
+
+
+
+
+
+gdfg
+
+
+gdfg
+
+
+gdfg
+
+gdfg
+
+
+gdfg
+
+
+
+
+
+
+
+
+gdfg
