--- a/_posts/2021-11-17-1000-exercise.md
+++ b/_posts/2021-11-17-1000-exercise.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title: 1000 exercise of Mr. NGUYEN TAN TRAN MINH KHANG
-subtitle: let's do exercise with me
+title: 1000 bài tập
+subtitle: hãy cùng tôi làm bài tập của thầy NGUYỄN TẤN TRẦN MING KHANG
 gh-repo: daattali/beautiful-jekyll
 gh-badge: [star, fork, follow]
 tags: [structure-algorithm]
@@ -9,289 +9,51 @@ comments: true
 author: Peter
 ---
 
-# Table of Contents
-1. [Example](#example)
-2. [Example2](#example2)
-3. [Third Example](#third-example)
-4. [Fourth Example](#fourth-examplehttpwwwfourthexamplecom)
-
-
-
-gdfg
-
-gdfg
-
-
-gdfg
-
-gdfg
-
-
-gdfg
-
-
-
-
-
-
-
-
-gdfg
-
-
-
-
-
-
-
-
-
-
-
-
-## Example
-
-gdfg
-
-
-gdfg
-
-gdfg
-
-
-gdfg
-
-
-
-
-
-
-
-
-gdfg
-
-gdfg
-
-
-gdfg
-
-gdfg
-
-
-gdfg
-
-
-
-
-
-
-
-
-gdfg
-
-
-gdfg
-
-
-gdfg
-
-gdfg
-
-
-gdfg
-
-
-
-
-
-
-
-
-gdfg
-
-
-gdfg
-
-
-gdfg
-
-gdfg
-
-
-gdfg
-
-
-
-
-
-
-
-
-gdfg
-
-
-## Example2
-
-
-gdfg
-
-
-gdfg
-
-gdfg
-
-
-gdfg
-
-
-
-
-
-
-
-
-gdfg
-
-
-gdfg
-
-
-gdfg
-
-gdfg
-
-
-gdfg
-
-
-
-
-
-
-
-
-gdfg
-
-
-gdfg
-
-
-gdfg
-
-gdfg
-
-
-gdfg
-
-
-
-
-
-
-
-
-gdfg
-
-
-## Third Example
-
-gdfg
-
-
-gdfg
-
-gdfg
-
-
-gdfg
-
-
-
-
-
-
-
-
-gdfg
-
-
-gdfg
-
-
-gdfg
-
-gdfg
-
-
-gdfg
-
-
-
-
-
-
-
-
-gdfg
-
-
-gdfg
-
-
-gdfg
-
-gdfg
-
-
-gdfg
-
-
-
-
-
-
-
-
-gdfg
-
-
-## [Fourth Example](http://www.fourthexample.com) 
-
-gdfg
-
-
-gdfg
-
-gdfg
-
-
-gdfg
-
-
-
-
-
-
-
-
-gdfg
-
-
-gdfg
-
-
-gdfg
-
-gdfg
-
-
-gdfg
-
-
-
-
-
-
-
-
-gdfg
+# Nội dung
+1. [Lưu Đồ Thuật Toán](#Chương 1)
+2. [Lập trình với ngôn ngữ Java](#Chương 2)
+3. [Cấu trúc điều kiển](#third-example)
+4. [Hàm](#fourth-examplehttpwwwfourthexamplecom)
+5. [Mảng Một Chiều](#fourth-examplehttpwwwfourthexamplecom)
+6. [Ma Trận](#fourth-examplehttpwwwfourthexamplecom)
+7. [Ma Trận Vuông](#fourth-examplehttpwwwfourthexamplecom)
+8. [Trừu Tượng Hóa Dữ Liệu](#fourth-examplehttpwwwfourthexamplecom)
+9. [Ma Trận Nâng Cao](#fourth-examplehttpwwwfourthexamplecom)
+10. [Đệ Quy](#fourth-examplehttpwwwfourthexamplecom)
+11. [Lập Trình Mùa Hè](#fourth-examplehttpwwwfourthexamplecom)
+12. [Danh Sách Liên Kết](#fourth-examplehttpwwwfourthexamplecom)
+13. [Cây Nhị Phân](#fourth-examplehttpwwwfourthexamplecom)
+14. [Ghi Chú](#fourth-examplehttpwwwfourthexamplecom)
+
+
+##Chương 1
+### Các bài tập liên quan lưu đồ thuật toán
+1. Tính S(n) = 1 + 2 + 3 + ...n.
+2. Tính S(n)= 1^2 + 2^2 + 3^2 + ...n2
+3. Tính S(n)= 1 + ½ + 1/3 + ...1/n.
+4. Tính S(n)= ½ + ¼ + ... 1/2n.
+5. Tính S(n)=1 + 1/3 + 1/5 ...1/(2n +1).
+6. Tính S(n)= 1/(1*2) + 1/(2*3) + ... + 1/n(n+1) .
+7. Tính S(n)= ½ + 2/3 + ¾ ... + n/(n+1)
+8. Tính S(n)= ½ + ¾ + 5/6 + ... + 2n+1/2n +2.
+9. Tính S(n)=1*2*3...*n.
+10. Tính S(x,n)= XN
+
+##Chương 2
+77. Viết Chương Trình tính tổng của dãy số sau: S(n) = 1 +2 +3+ ... + n.
+78. Liệt kê tất cả các ước số của số nguyên dương N.
+79. Hãy đếm số lượng các chữ số của số nguyên dương N.
+80. Tính
+    ![80](/post-assets/post/2021-11-17-1000-exercise/80.PNG)
+##Chương 3
+##Chương 4
+##Chương 5
+##Chương 6
+##Chương 7
+##Chương 8
+##Chương 9
+##Chương 10
+##Chương 11
+##Chương 12
+##Chương 13
+ 
