update post 1000 exercise

--- a/_posts/2021-11-17-1000-exercise.md
+++ b/_posts/2021-11-17-1000-exercise.md
@@ -10,21 +10,21 @@ author: Peter
 ---
 
 # Nội dung
-1. [Lưu Đồ Thuật Toán](#Chương 1)
-2. [Lập trình với ngôn ngữ Java](#Chương 2)
-3. [Cấu trúc điều kiển](#Chương3)
-4. [Hàm](#Chương4)
-5. [Mảng Một Chiều](#Chương5)
-6. [Ma Trận](#Chương 6)
-7. [Ma Trận Vuông](#Chương 7)
-8. [Trừu Tượng Hóa Dữ Liệu](#Chương 8)
-9. [Ma Trận Nâng Cao](#Chương 9)
-10. [Đệ Quy](#Chương 10)
-11. [Lập Trình Mùa Hè](#Chương 11)
-12. [Danh Sách Liên Kết](#Chương 12)
-13. [Cây Nhị Phân](#Chương 13)
-14. [Bài Tập Khác](#Chương 14)
-15. [Bài Tập Nâng Cao](#Chương 15)
+1. [Lưu Đồ Thuật Toán](#chương-1)
+2. [Lập trình với ngôn ngữ Java](#chương-2)
+3. [Cấu trúc điều kiển](#chương-3)
+4. [Hàm](#chương-4)
+5. [Mảng Một Chiều](#chương-5)
+6. [Ma Trận](#chương-6)
+7. [Ma Trận Vuông](#chương-7)
+8. [Trừu Tượng Hóa Dữ Liệu](#chương-8)
+9. [Ma Trận Nâng Cao](#chương-9)
+10. [Đệ Quy](#chương-10)
+11. [Lập Trình Mùa Hè](#chương-11)
+12. [Danh Sách Liên Kết](#chương-12)
+13. [Cây Nhị Phân](#chương-13)
+14. [Bài Tập Khác](#chương-14)
+15. [Bài Tập Nâng Cao](#chương-15)
 
 
 ##Chương 1
