--- a/_posts/2021-11-17-1000-exercise.md
+++ b/_posts/2021-11-17-1000-exercise.md
@@ -1,15 +1,12 @@
 ---
-layout: post
-title: 1000 bài tập
-subtitle: hãy cùng tôi làm bài tập của thầy NGUYỄN TẤN TRẦN MING KHANG
-gh-repo: daattali/beautiful-jekyll
-gh-badge: [star, fork, follow]
+layout: post title: 1000 bài tập subtitle: hãy cùng tôi làm bài tập của thầy NGUYỄN TẤN TRẦN MING KHANG gh-repo:
+daattali/beautiful-jekyll gh-badge: [star, fork, follow]
 tags: [structure-algorithm]
-comments: true
-author: Peter
+comments: true author: Peter
 ---
 
 # Nội dung
+
 1. [Lưu Đồ Thuật Toán](#chương-1)
 2. [Lập trình với ngôn ngữ Java](#chương-2)
 3. [Cấu trúc điều kiển](#chương-3)
@@ -26,9 +23,10 @@ author: Peter
 14. [Bài Tập Khác](#chương-14)
 15. [Bài Tập Nâng Cao](#chương-15)
 
-
 ## Chương 1
-###  Các bài tập liên quan lưu đồ thuật toán
+
+### Các bài tập liên quan lưu đồ thuật toán
+
 + Bài 1: Tính S(n) = 1 + 2 + 3 + ...n.
 + Bài 2: Tính S(n)= 1^2 + 2^2 + 3^2 + ...n2
 + Bài 3: Tính S(n)= 1 + ½ + 1/3 + ...1/n.
@@ -41,10 +39,12 @@ author: Peter
 + Bài 10: Tính S(x,n)= X^N
 
 ## Chương 2
+
 + Bài 77: Viết Chương Trình tính tổng của dãy số sau: S(n) = 1 +2 +3+ ... + n.
 + Bài 78: Liệt kê tất cả các ước số của số nguyên dương N.
 + Bài 79: Hãy đếm số lượng các chữ số của số nguyên dương N.
-+ Bài 80: Tính ![80](https://raw.githubusercontent.com/nguyenthinhit996/blog/master/post-assets/post/2021-11-17-1000-exercise/80.PNG)
++ Bài 80:
+  Tính ![80](https://raw.githubusercontent.com/nguyenthinhit996/blog/master/post-assets/post/2021-11-17-1000-exercise/80.PNG)
 
 ## Chương 3
 
@@ -58,7 +58,6 @@ author: Peter
 + Bài 89: Viết chương trình tính tổng các giá trị lẻ nguyên dương nhỏ hơn N.
 + Bài 90: Viết chương trình tìm số nguyên dương m lớn nhất sao cho 1+ 2 + 3 + ... m < N
 
-
 ## Chương 4
 
 + 115 Viết chương trình nhập họ tên, điểm toán, điểm văn của một học sinh. Tính điểm trung bình và xuất kết quả.
@@ -66,8 +65,7 @@ author: Peter
 + 119 Liệt kê tất cả các số nguyên tố nhỏ hơn n.
 + 120 Liệt kê các số chính phương nhỏ hơn n.
 + 121
-  ![121](https://raw.githubusercontent.com/nguyenthinhit996/blog/master/post-assets/post/2021-11-17-1000-exercise/80.PNG) 
-  
+  ![121](https://raw.githubusercontent.com/nguyenthinhit996/blog/master/post-assets/post/2021-11-17-1000-exercise/80.PNG)
 
 ## Chương 5:
 
@@ -83,18 +81,18 @@ author: Peter
 + Bài 128: Viết hàm nhập mảng một chiều các số thực
 + Bài 129: Viết hàm nhập mảng một chiều các số nguyên.
 + Bài 130: Viết hàm xuất mảng một chiều các số thực.
-+ Bài 132: Viết hàm liệt kê các giá trị chẵn trong mảng một chiều các số nguyên. 
++ Bài 132: Viết hàm liệt kê các giá trị chẵn trong mảng một chiều các số nguyên.
 + Bài 133: Viết hàm liệt kê các vị trí mà giá trị tại đó là giá trị âm trong mảng một chiều số thực.
-
 
 ### 5.2 Kĩ thuật đặc lính canh
 
 + Bài 134: Viết hàm tìm “ giá trị lớn nhât” trong mảng 1 chiều số thực
 + Bài 135: Tìm giá trị dương đầu tiên trong mảng một chiều các số thực
-+ Bài 136: Tìm số chẵn cuối cùng trong mảng một chiều các số nguyên . nếu mảng không có giá trị chẵn thì trả về giá trị -1.
++ Bài 136: Tìm số chẵn cuối cùng trong mảng một chiều các số nguyên . nếu mảng không có giá trị chẵn thì trả về giá trị
+  -1.
 + Bài 137: Tìm “ một vị trí mà giá trị tại vị trí đó là giá trị nhỏ nhất” trong mảng một chiều các số thực
-+ Bài 138: Tìm “vị trí của giá trị chẵn đầu tiên” trong mảng một chiều các số nguyên. Nếu mảng không có giá trị chẵn thì hàm sẽ trả về giá trị là -1.
-
++ Bài 138: Tìm “vị trí của giá trị chẵn đầu tiên” trong mảng một chiều các số nguyên. Nếu mảng không có giá trị chẵn thì
+  hàm sẽ trả về giá trị là -1.
 
 ### 5.3 bài tập luyện tư duy.
 
@@ -102,27 +100,27 @@ author: Peter
 
   | 24 | 45 | 23 | 13 | 43 | -12 |
   | --- | --- | --- | --- | --- | --- |
-    
-    Gia trị x = 15
-    Khoảng các tự x = 15  tới các phần tử khác nhau trong mảng là:
-    9	30	8	2	28	27
-    
-    | 9   | 30  | 8   | 2   | 28  | -27 |
-    | --- | --- | --- | --- | --- | --- |
-    
-    Giá trị trong mảng xa giá trị X nhất là : 45
 
-+ Bài 156: Hãy tìm một giá trị trong mảng các số thực có giá trị gần nhất.
-Giống như ở trên kết quả ra là 13.
+  Gia trị x = 15 Khoảng các tự x = 15 tới các phần tử khác nhau trong mảng là:
+  9 30 8 2 28 27
+
+  | 9   | 30  | 8   | 2   | 28  | -27 |
+  | --- | --- | --- | --- | --- | --- |
+
+  Giá trị trong mảng xa giá trị X nhất là : 45
+
++ Bài 156: Hãy tìm một giá trị trong mảng các số thực có giá trị gần nhất. Giống như ở trên kết quả ra là 13.
 + Bài 157: Cho mảng một chiều các số thực, hãy tìm đoạn [a,b] sao cho đoạn này chứa tất cả các giá trị trong mảng.
 + Bài 158: Cho mảng một chiều các số thực, hãy tìm giá trị x sao cho [-x,x] chứa tất cả các giá trị trong mảng.
-+ Bài 159: Cho mảng 1 chiều các số thực hãy tìm giá trị đầu tiên lớn hơn giá trị 2003. Nếu không có giá trị thõa mãn trả về 0.
++ Bài 159: Cho mảng 1 chiều các số thực hãy tìm giá trị đầu tiên lớn hơn giá trị 2003. Nếu không có giá trị thõa mãn trả
+  về 0.
 
 ### 5.4: các bài tập tìm kiếm và liệt kê.
 
-+ Bài 176: Hãy liệt kê các số âm trong mảng một chiều và các số thực. 
++ Bài 176: Hãy liệt kê các số âm trong mảng một chiều và các số thực.
 + Bài 177: Hãy liệt kê các số giá trị trong mảng số thực thuộc đoạn [x,y] cho trước.
-+ Bài 178: Hãy liệt kê các số giá trị chẵn trong mảng một chiều các số nguyên thuộc đoạn [x,y] cho trước x,y là số nguyên.
++ Bài 178: Hãy liệt kê các số giá trị chẵn trong mảng một chiều các số nguyên thuộc đoạn [x,y] cho trước x,y là số
+  nguyên.
 + Bài 179: Hãy liệt kê các giá trị trong mảng mà thỏa điều kiện lớn hơn trị tuyệt đối của giá trị đứng liền sau nó.
 
 ### 5.5: kĩ thuật tính tổng.
@@ -132,7 +130,6 @@ Giống như ở trên kết quả ra là 13.
 + Bài 202: Tính tổng các giá trị có chữ số đầu tiên là chữ số lẻ trong mảng một chiều các số nguyên.
 + Bài 203: Tính tổng các giá trị có chữ số hàng chục là chữ số 5 có trong mảng các số nguyên.
 
-
 ### 5.6: kĩ thuật đếm.
 
 + Bài 216: Đếm số lượng số chẵn có trong mảng một chiều các số nguyên.
@@ -140,14 +137,16 @@ Giống như ở trên kết quả ra là 13.
 + Bài 218: Đếm số lượng các giá trị đối xứng mảng các số nguyên.
 + Bài 219: Đếm số lần xuất hiện của giá trị x trong mảng một chiều.
 
-
 ### 5.7: kĩ thuật đặt cờ hiệu.
 
-+ Bài 240: Hãy kiểm tra mảng số nguyên có tồn tại giá trị 0 hay không. Nếu không tồn tại giá trị 0 trả về 0 , nếu có trả về 1.
++ Bài 240: Hãy kiểm tra mảng số nguyên có tồn tại giá trị 0 hay không. Nếu không tồn tại giá trị 0 trả về 0 , nếu có trả
+  về 1.
 + Bài 241: Hãy kiểm tra mảng số nguyên có tồn tại giá trị không liên tiếp hay không.
-+ Bài 242: Hãy kiểm tra mảng số nguyên có tồn tại giá trị chẵn hay không. Nếu không tồn tại giá trị chẵn trả về giá trị 0 hay ngược lại trả về giá trị 1.
++ Bài 242: Hãy kiểm tra mảng số nguyên có tồn tại giá trị chẵn hay không. Nếu không tồn tại giá trị chẵn trả về giá trị
+  0 hay ngược lại trả về giá trị 1.
 + Bài 243: Hãy kiểm tra mảng số nguyên có tồn tại số nguyên tố hay không. Nếu có trả về 1, nếu không trả về 0.
-+ Bài 244: Hãy kiểm tra mảng có thỏa mản tính chất sau không: “Mảng không có tồn tại số hoàn thiện lơn hơn 256”. Nếu thả trả về 1 , nếu không trả về 0.
++ Bài 244: Hãy kiểm tra mảng có thỏa mản tính chất sau không: “Mảng không có tồn tại số hoàn thiện lơn hơn 256”. Nếu thả
+  trả về 1 , nếu không trả về 0.
 
 ### 5.8: kĩ thuật sắp xếp.
 
@@ -156,14 +155,15 @@ Giống như ở trên kết quả ra là 13.
 + Bài 257: Hãy sắp xếp các giá trị tại các vị trí lẻ trong mảng tăng dần các vị trí khác giữ nguyên.
 + Bài 258: Hãy sắp xếp các số nguyên tố trong mảng các số nguyên tố tăng dần các giá trị khác giữ nguyên về vị trí.
 
-
 ### 5.9: kĩ thuật thêm.
 
 + Bài 266: Hãy thêm một phần tử có giá trị x vào mảng tại vị trí K.
-+ Bài 267: Hãy viết hàm nhập mảng một chiều các số thực sao cho khi mảng nhập xong các giá trị trong mảng được sắp giảm dần.
++ Bài 267: Hãy viết hàm nhập mảng một chiều các số thực sao cho khi mảng nhập xong các giá trị trong mảng được sắp giảm
+  dần.
 + Bài 268: Hãy tạo bảng b từ mảng a các giá trị 0,1 để mảng có tính “tính chẵn lẻ”
-+ Bài 269: Hãy thêm một giá trị x vào trong mảng tăng dần mà vẫn gữi nguyên tính đơn  điệu tăng của mảng.
-+ Bài 270: Viết chương trình thực hiện các yêu cầu sau: nhập mảng n số nguyên từ bàn phím sao cho khi nhập xong các phần tử trong mảng được sắp xếp theo thứ tự tăng dần.
++ Bài 269: Hãy thêm một giá trị x vào trong mảng tăng dần mà vẫn gữi nguyên tính đơn điệu tăng của mảng.
++ Bài 270: Viết chương trình thực hiện các yêu cầu sau: nhập mảng n số nguyên từ bàn phím sao cho khi nhập xong các phần
+  tử trong mảng được sắp xếp theo thứ tự tăng dần.
 
 ### 5.10: kĩ thuật xóa.
 
@@ -173,7 +173,6 @@ Giống như ở trên kết quả ra là 13.
 + Bài 274: Hãy xóa tât cả các số chẵn trong mảng các số nguyên.
 + Bài 275: Hãy xóa tất cả “số chính phương” trong mảng một chiều các số nguyên.
 
-
 ### 5.11: kĩ thuật xử lí mảng.
 
 + Bài 280: Hãy đưa một số về đầu mảng
@@ -181,7 +180,6 @@ Giống như ở trên kết quả ra là 13.
 + Bài 282: Hãy đưa các số chia hết cho 3 về đầu mảng.
 + Bài 283: Hãy đảo ngược mảng ban đầu.
 + Bài 284: Hãy đảo ngược thứ tự các số chẵn có trong mảng.
-
 
 ### 5.12: Kĩ thuật xử lí mảng con.
 
@@ -192,14 +190,14 @@ Giống như ở trên kết quả ra là 13.
 + Bài 297: Tính tổng từng mảng con tăng trong mảng con chiều các mảng.
 + Bài 298: Đếm số lượng mảng con tăng có độ dài hơn 1 trong mảng một chiều các số thực.
 
-
 ### 5.13: Kĩ thuật Xây dựng mảng.
 
 + Bài 307: Cho mảng một chiều các số nguyên a. Hãy tạo mảng b từ mảng a, sao cho mảng b chỉ chứa các giá trị lẻ.
 + Bài 308: Cho mảng một chiều các số thực a. Hãy tạo mảng b từ mảng a, sao cho mảng b chỉ chứa các giá trị âm.
-+ Bài 309: Cho mảng một chiều các số thực a. Hãy tạo mảng b từ mảng a, với b[i] = tổng các phần tử lân cận với a[i] trong mảng a.
-+ Bài 310: Cho mảng một chiều chiều các số nguyên a. Hãy tạo mảng b từ mảng a, sao cho mảng b chỉ chứa chứa các số nguyên tố trong mảng.
-
++ Bài 309: Cho mảng một chiều các số thực a. Hãy tạo mảng b từ mảng a, với b[i] = tổng các phần tử lân cận với a[i]
+  trong mảng a.
++ Bài 310: Cho mảng một chiều chiều các số nguyên a. Hãy tạo mảng b từ mảng a, sao cho mảng b chỉ chứa chứa các số
+  nguyên tố trong mảng.
 
 ## Chương 6
 
@@ -212,8 +210,7 @@ Giống như ở trên kết quả ra là 13.
 + Bài 315: Viết hàm tìm giá trị lớn nhất trong ma trận các số thực.
 + Bài 316: Viết hàm kiểm tra trong ma trận các số nguyên có tồn tại giá trị chẵn nhỏ hơn 2004 hay không.
 
-
-### 6.2 Kĩ thuật Đếm	
+### 6.2 Kĩ thuật Đếm
 
 + Bài 320: Tính tổng các số dương trong ma trận các số thực.
 + Bài 321: Tính tích các giá trị lẻ trong ma trận các số nguyên.
@@ -245,22 +242,22 @@ Giống như ở trên kết quả ra là 13.
 + Bài 394: Dịch xuống xoay vòng các hàng trong ma trận.
 
   |87 |75 |62 |54 |
-  |---|---|---|---|
+    |---|---|---|---|
   |46 |40 |33 |28 |
   |20 |18 |15 |10 |
   |-20|67 |53 |23 |
-  
-  Kêt quả: 
-  
+
+  Kêt quả:
+
   |-20 |67 |53 |23 |
-  |--- |---|---|---|
-  |87	 |75 |62 |54 |
-  |46	 |40 |33 |28 |
-  |20	 |18 |15 |10 |
+    |--- |---|---|---|
+  |87     |75 |62 |54 |
+  |46     |40 |33 |28 |
+  |20     |18 |15 |10 |
 
 + Bài 401: Xoay ma trận 1 góc 90 độ
 
-### 6.6 Sắp xếp	
+### 6.6 Sắp xếp
 
 + Bài 407: Viết hàm sắp xếp ma trận các phần tử trên một dòng tăng dần từ trái sang phải.
 + Bài 408: Viết hàm sắp xếp các phần tử trên 1 dòng giảm dần từ trái sang phải.
@@ -268,37 +265,37 @@ Giống như ở trên kết quả ra là 13.
 + Bài 411: Viết hàm xuất các giá trị chẵn trong ma trận các ô nguyên theo thứ tự giảm dần.
 + Bài 412: Viết hàm xuất các số nguyên tố trong ma trận các số nguyên ra màn hình theo thứ tự tăng dần.
 + Bài 413: Viết hàm sắp xếp các phần tử trong ma trận theo yêu cầu:
-  Dòng chỉ có số chẵn tăng dần.
-  Dòng chỉ có số lẻ tăng dần.
-
+  Dòng chỉ có số chẵn tăng dần. Dòng chỉ có số lẻ tăng dần.
 
 ### 6.7 Xây dựng ma trận
 
 + Bài 426: Cho ma trận các số thực A (m x n). Hãy xây dựng ma trận B (m x n) từ ma trận A so cho:
-B[i][j] = abs( A[i][j]).
-+ Bài 427: Cho ma trận các số thực A (m xn). Hãy xây dựng ma trận B(m x n) từ ma trận A sao cho B[i][j] = số lượng phần tử xung quanh A[i][j] trong ma trận A (B[i][j] tối đa là 8 và nhỏ nhất la 0).
-+ Bài 428: Cho ma trận các số thực A (m x n) . Hãy xây dựng ma trận B(m x n) từ ma trận A sao cho.
-B[i][j] = lớn nhất của dòng i và cột J trong ma trận
-  
+  B[i][j] = abs( A[i][j]).
++ Bài 427: Cho ma trận các số thực A (m xn). Hãy xây dựng ma trận B(m x n) từ ma trận A sao cho B[i][j] = số lượng phần
+  tử xung quanh A[i][j] trong ma trận A (B[i][j] tối đa là 8 và nhỏ nhất la 0).
++ Bài 428: Cho ma trận các số thực A (m x n) . Hãy xây dựng ma trận B(m x n) từ ma trận A sao cho. B[i][j] = lớn nhất
+  của dòng i và cột J trong ma trận
+
 ## Chương 7
 
 ### 7.1 Tính Toán
+
 + Bài 429: Viết hàm ma trận vuông các số nguyên.
 + Bài 430: Hàm nhập ma trận các số thực
 + Bài 431: Hàm xuất ma trận vuông cá số nguyên.
 + Bài 433: Viết hàm tìm giá trị lớn nhất trong ma trận vuông các số thực
 + Bài 434: Viết hàm kiểm tra trong ma trận vuông các số nguyên có tồn tại giá trị chẵn nhỏ hơn 2004 hay không?
 
-
 ### 7.2 Kĩ thuật đặt lính canh
+
 + Bài 443: Tìm giá trị lớn nhất trong ma trận tam giác trên.
 + Bài 445: Tìm giá trị lớn nhất trên đường chéo chính trong ma trận vuông các số thực
 + Bài 446: Tìm giá trị lớn nhất trên đường chéo phụ trong ma trận vuông các số thực.
 + Bài 447: Tìm ra giá trị nguyên tố lớn nhất trong ma trận vuông các số nguyên
 + Bài 448: Tìm ra giá trị gần nhau nhất trong ma trận.
 
-
 ### 7.3 Kĩ thuật đếm
+
 + Bài 450: đếm số lượng cặp giá trị đối xứng nhau qua đường chéo chính.
 + Bài 451: Đếm số lượng dòng giảm trong ma trận.
 + Bài 452: Đếm số lượng phần tử cực đại trong ma trận.
@@ -307,12 +304,14 @@ B[i][j] = lớn nhất của dòng i và cột J trong ma trận
 + Bài 455: Đếm số lượng giá trị chẵn trong ma trận vuông các số nguyên.
 
 ### 7.4 Kĩ thuật đặt cờ hiệu
+
 + Bài 456: Kiểm tra đường chéo chính có tăng dần từ trên xuống dưới hay không.
 + Bài 457: Kiểm tra ma trận có đối xứng qua đường chéo chính hay không.
 + Bài 458: Kiểm tra ma trận có đối xứng qua đường chéo phụ hay không.
 + Bài 459: Kiểm tra ma trận có phải là ma trận bậc n hay không.
 
 ### 7.5 Sắp xếp
+
 + Bài 460: Sắp xếp các phần tử trên đường chéo chính tăng dần.
 + Bài 461: Sắp xếp các phần tử trên đường chéo phụ giảm dần.
 + Bài 462: hoán vị hai dòng trong ma trận.
@@ -320,13 +319,12 @@ B[i][j] = lớn nhất của dòng i và cột J trong ma trận
 + Bài 464: Sắp xếp cách dòng tăng theo tổng dòng.
 + Bài 465: Đưa các giá trị chẵn về đầu ma trận vuông các số nguyên.
 
-
 ### 7.6 Các phép toán trên ma trận
+
 + Bài 469: Tổng hai ma trận
 + Bài 470: Hiệu 2 ma trận
 + Bài 471: Tích 2 ma trận
 + Bài 472: Tìm ma trận nghịch đảo
-
 
 ## Chương 8
 
@@ -340,7 +338,6 @@ B[i][j] = lớn nhất của dòng i và cột J trong ma trận
 + Bài 489: Tính đạo hàm cấp K đơn thức
 + Bài 490: Tính giá trị đơn thức tại vị trí x = X3
 
-
 ### 8.2 Đa thức
 
 + Bài 493: Tính hiêu hai đa thức
@@ -350,7 +347,6 @@ B[i][j] = lớn nhất của dòng i và cột J trong ma trận
 + Bài 497: Tính đa thức dư của phép chia đa thức .
 + Bài 498: Tính đạo hàm cấp 1 đa thức
 + Bài 499: Tính đạo hàm cấp K của đa thức
-
 
 ### 8.3 Phân số
 
@@ -364,8 +360,8 @@ B[i][j] = lớn nhất của dòng i và cột J trong ma trận
 + Bài 513: Kiểm tra phân số dương.
 + Bài 514: Kiểm tra phân số âm.
 
-
 ### 8.4 Hỗn số
+
 + Bài 522: Viết khai báo kiểu dữ liệu để biểu diễn thông tin của hỗn số.
 + Bài 523: Nhập hỗn số.
 + Bài 524: Xuất hôn số.
@@ -374,7 +370,6 @@ B[i][j] = lớn nhất của dòng i và cột J trong ma trận
 + Bài 527: Tính hiệu 2 hỗn số.
 + Bài 528: Tính tích hai hỗn số.
 
-
 ### 8.5 Số Phức
 
 + Bài 532: Khai báo kiểu dữ liệu để biểu diễn thông tin của một số phức.
@@ -382,7 +377,6 @@ B[i][j] = lớn nhất của dòng i và cột J trong ma trận
 + Bài 534: xuất số phức
 + Bài 535: Tính tổng 2 số phức.
 + Bài 536: Tính hiệu 2 số phức.
-
 
 ### 8.6 Điểm trong mặt phẳng toạ độ Oxy
 
@@ -424,8 +418,8 @@ B[i][j] = lớn nhất của dòng i và cột J trong ma trận
 + Bài 581: Khai báo kiểu dữ liệu để biểu diễn tam giác trong mặt phẳng Oxy
 + Bài 582: Nhập Tam giác.
 + Bài 583: Xuất tam giác theo định dạng như sau:
-((x1,x2}, {x2, y2}, {x3, y3});
-+ Bài 584: Kiểm tra tọa độ 3 đỉnh có thật sự thành lập 3 đỉnh  của một tam giác không?
+  ((x1,x2}, {x2, y2}, {x3, y3});
++ Bài 584: Kiểm tra tọa độ 3 đỉnh có thật sự thành lập 3 đỉnh của một tam giác không?
 + Bài 585: Tính chu vi tam giác.
 + Bài 586: Tính diện tích tam giác.
 + Bài 587: Tính tọa độ trọng tâm của tam giác.
@@ -458,7 +452,6 @@ B[i][j] = lớn nhất của dòng i và cột J trong ma trận
 + Bài 655: Cho n đường tròn. Hãy kiểm tra đường tròn này có đôi một các nhau không.
 + Bài 656: Cho n đường tròn đôi một không trùng nhau. Hãy liệt kê tất cả các cặp đường tròn tiếp xúc nhau.
 
-
 ### 8.14 Mảng một chiều các đường thẳng
 
 + Bài 659: Cho n đường thẳng . Hãy kiểu tra các đường thẳng này có cùng song song với nhau không .
@@ -466,8 +459,8 @@ B[i][j] = lớn nhất của dòng i và cột J trong ma trận
 + Bài 661: Cho n đường thẳng. Hãy kiểm tra các đường thẳng này có cặp đường thẳng trùng nhau không.
 + Bài 662: Cho n đường thẳng. Hãy kiểm tra xem có ba đường thẳng nào đồng qui hay không.
 + Bài 663: Cho n đường thẳng. Và tọa độ một điểm P. Hãy kiểm tra xem có đường thằng nào đi qua điểm P hay không.
-+ Bài 664: Cho n đường thẳng và 1 tọa điểm P không thuộc bắt cứ đường thẳng nào bạn hãy tìm đường thẳng nào gần nhất vs P.
-
++ Bài 664: Cho n đường thẳng và 1 tọa điểm P không thuộc bắt cứ đường thẳng nào bạn hãy tìm đường thẳng nào gần nhất vs
+  P.
 
 ## Chương 9
 
@@ -497,39 +490,36 @@ B[i][j] = lớn nhất của dòng i và cột J trong ma trận
 + Bài 699: Tìm số phức cuối trong ma trận có trân phần thực âm và phần ảo âm.
 + Bài 700: Đếm số lượng dòng trong ma trận có chứa toàn số phức thỏa điều kiện ”phần thực và phần ảo trái dấu nhau”
 
-
 ## Chương 10
 
-+ Bài 702: Tính S(n) =  1 + 2+ 3 + ... + n.
++ Bài 702: Tính S(n) = 1 + 2+ 3 + ... + n.
 + Bài 703: Hãy cài đặt hàm đệ qui tính T(n) = n! = 1x2x3x..xn. trong đó T(0) = 1.
 + Bài 704: Cho mảng một chiều các số nguyên. Viết hàm tính tổng các số chẵn trong mảng bằng phương pháp đệ qui.
 + Bài 705: Cho mảng một chiều các số thực. Viết hàm đếm số lượng giá trị đương trong mảng bằng phương pháp đệ qui.
 + Bài 706: Hàm tính căn bặc 3 của một số thực có thể cài đặt đệ qui theo hai hàm exp và ln nhờ vào nhật xét sau đây:
-![706](https://raw.githubusercontent.com/nguyenthinhit996/blog/master/post-assets/post/2021-11-17-1000-exercise/706.PNG)
+  ![706](https://raw.githubusercontent.com/nguyenthinhit996/blog/master/post-assets/post/2021-11-17-1000-exercise/706.PNG)
 
 ## Chương 11
-###  Lập trình con trỏ trên Java.
 
+### Lập trình con trỏ trên Java.
 
 ## Chương 12
-###  Tìm hiểu các kiểu dánh sách 
-###  Thêm, xóa, sửa, sort.
-###  So sánh perfomance 
 
+### Tìm hiểu các kiểu dánh sách
+
+### Thêm, xóa, sửa, sort.
+
+### So sánh perfomance
 
 ## Chương 13
 
 + Bài 861: Hãy khai báo cấu trúc dữ liệu cây nhị phân (dạng trừu tượng).
 + Bài 862: Hãy khai báo cấu trúc dữ liệu cây nhị phân các phân số.
-+ Bài 863: Hãy khai báo cấu trúc dữ liệu cây nhị phân toạ độ các điểm trên mặt
-phẳng Oxy.
-+ Bài 864: Cho cây nhị phân khác rỗng. Hãy viết hàm tìm giá trị lớn nhất trong
-cây nhị phân các số nguyên.
-+ Bài 865: Cho cây nhị phân T các số thực. Hãy viết hàm đếm các giá trị âm có
-trong cây?
-+ Bài 866: Cho cây nhị phân T các số thực. Hãy viết hàm tính tổng các giá trị
-dương nhỏ hơn 2004 có trong cây?
-  
++ Bài 863: Hãy khai báo cấu trúc dữ liệu cây nhị phân toạ độ các điểm trên mặt phẳng Oxy.
++ Bài 864: Cho cây nhị phân khác rỗng. Hãy viết hàm tìm giá trị lớn nhất trong cây nhị phân các số nguyên.
++ Bài 865: Cho cây nhị phân T các số thực. Hãy viết hàm đếm các giá trị âm có trong cây?
++ Bài 866: Cho cây nhị phân T các số thực. Hãy viết hàm tính tổng các giá trị dương nhỏ hơn 2004 có trong cây?
+
 ### 13.1 Nhập , xuất, liệt kê
 
 + Bài 870: Viết hàm xuất các giá trị trong cây.
@@ -537,57 +527,60 @@ dương nhỏ hơn 2004 có trong cây?
 + Bài 872: Viết hàm xuất địa chỉ các nút trên cây có giá trị (khóa) lớn hơn x và nhỏ hơn y.
 + Bài 873: Viết hàm xuất các số hoàn hiện trong cây.
 + Bài 874: (*) Viết hàm xuất tất cả các nút trên tầng thứ k của cây.
-+ Bài 875: (*) Viết hàm xuất tất cả các nút trên cây theo thứ tự từ tầng 0 đến tầng
-h – 1 của cây ( với h là chiều cao của cây)
-
++ Bài 875: (*) Viết hàm xuất tất cả các nút trên cây theo thứ tự từ tầng 0 đến tầng h – 1 của cây ( với h là chiều cao
+  của cây)
 
 ### 13.2 Kĩ thuật đếm
+
 + Bài 876: Đếm số lượng nút có đúng một con.
 + Bài 877: Đếm số lượng nút có đúng hai con.
 + Bài 878: Đếm số lượng nút chẵn.
 + Bài 879: Đếm số lượng nút lá mà thông tin tại nút đó là giá trị chẵn.
-+ Bài 880: Đếm số lượng nút có đúng một con mà thông tin tại nút đó là số
-nguyên tố.
-+ Bài 881: Đếm số lượng nút có đúng hai con mà thông tin tại nút đó là số chính
-phương.
++ Bài 880: Đếm số lượng nút có đúng một con mà thông tin tại nút đó là số nguyên tố.
++ Bài 881: Đếm số lượng nút có đúng hai con mà thông tin tại nút đó là số chính phương.
 
 ### 13.3 Kĩ thuật tính toán
+
 + Bài 885: Tính tổng các nút trong cây.
 + Bài 886: Tính tổng các nút lá trong cây.
 + Bài 887: Tính tổng các nút có đúng một con.
 + Bài 888: Tính tổng các nút có đúng hai con.
 + Bài 889: Tính tổng các nút lẻ.
 + Bài 890: Tính tổng các nút lá mà thông tin tại nút lá đó là giá trị chẵn.
-+ Bài 891: Tính tổng các nút có đúng một con mà thông tin tại nút đó là số nguyên
-tố.
++ Bài 891: Tính tổng các nút có đúng một con mà thông tin tại nút đó là số nguyên tố.
 
 ### 13.4 Kĩ thuật đặt cờ hiệu
-+ Bài 894: Kiểm tra cây nhị phân T có phải là “cây nhị phân tìm kiếm” hay
-không?
+
++ Bài 894: Kiểm tra cây nhị phân T có phải là “cây nhị phân tìm kiếm” hay không?
 + Bài 895: Kiểm tra cây nhị phân T có phải là “cây cân bằng’ hay không?
-+ Bài 896: Kiểm tra cây nhị phân T có phải là “cây cân bằng hoàn toàn” hay
-không?
++ Bài 896: Kiểm tra cây nhị phân T có phải là “cây cân bằng hoàn toàn” hay không?
 
 ### 13.5 Kĩ thuật đặt lính canh
+
 + Bài 897: Tìm giá trị lớn nhất trong cây.
 + Bài 898: Tìm giá trị nhỏ nhất trong cây.
 + Bài 899: Tìm độ lệch lớn nhất trên cây.
 + Bài 900: Tìm địa chỉ nút mà giá trị tại nút đó là giá trị lớn nhất.
-+ Bài 901: Tìm địa chỉ của nút trong cây mà giá trị tại nút đó bằng giá trị x. Nếu
-không tìm thấy hàm trả về giá trị NULL
++ Bài 901: Tìm địa chỉ của nút trong cây mà giá trị tại nút đó bằng giá trị x. Nếu không tìm thấy hàm trả về giá trị
+  NULL
+
 ### 13.6 KỸ THUẬT NHẬP, XUẤT, LIỆT KÊ
+
 + Bài 902: Viết hàm xuất các phân số dương trong cây.
 + Bài 903: Viết hàm xuất tất cả các phân số dương trên tầng thứ k của cây.
-+ Bài 904: Viết hàm xuất tất cả các nút trên cây theo thứ tự từ tầng 0 đến tầng h –
-1 của cây ( với h là chiều cao của cây)
++ Bài 904: Viết hàm xuất tất cả các nút trên cây theo thứ tự từ tầng 0 đến tầng h – 1 của cây ( với h là chiều cao của
+  cây)
 
 ### 13.7 KỸ THUẬT ĐẾM
+
 + Bài 905: Đếm số lượng nút có đúng một con và giá trị tại đó là phân số tối giản.
-+ Bài 906: Đếm số lượng nút có đúng hai con và giá trị tại nút đó là phân số âm.907.Đếm số lượng nút âm trên tầng thứ k của cây.
++ Bài 906: Đếm số lượng nút có đúng hai con và giá trị tại nút đó là phân số âm.907.Đếm số lượng nút âm trên tầng thứ k
+  của cây.
 + Bài 908: Đếm số lượng nút nằm ở tầng thấp hơn tầng thứ k của cây.
 + Bài 909: Đếm số lượng nút nằm ở tầng cao hơn tầng thứ k của cây.
 
 ### 13.8 KỸ THUẬT TÍNH TOÁN
+
 + Bài 910: Tính tổng các nút trong cây.
 + Bài 911: Tính tổng các nút lá trong cây.
 + Bài 912: Tính tổng các nút có đúng một con.
@@ -595,56 +588,47 @@ không tìm thấy hàm trả về giá trị NULL
 + Bài 914: Tính chiều cao của cây.
 
 ### 13.9 KỸ THUẬT ĐẶT CỜ HIỆU
-+ Bài 915: Kiểm tra cây nhị phân T có phải là “cây nhị phân tìm kiếm” hay
-không?
-+ Bài 916: Kiểm tra cây nhị phân T có phải là “cây nhị phân cân bằng” hay
-không?
-+ Bài 917: Kiểm tra cây nhị phân T có phải là “cây cân bằng hoàn toàn hay
-không?
-  
+
++ Bài 915: Kiểm tra cây nhị phân T có phải là “cây nhị phân tìm kiếm” hay không?
++ Bài 916: Kiểm tra cây nhị phân T có phải là “cây nhị phân cân bằng” hay không?
++ Bài 917: Kiểm tra cây nhị phân T có phải là “cây cân bằng hoàn toàn hay không?
+
 ### 13.10 KỸ THUẬT LÍNH CANH
+
 + Bài 918: Tìm giá trị lớn nhất trong cây.
 + Bài 919: Tìm giá trị nhỏ nhất trong cây.
-+ Bài 920: Tìm độ lệch lớn nhất trên cây. Độ lệch của một nút trong cây được định
-nghĩa là chiều cao của cây con trái trừ chiều cao cây con phải lấy giá trị
-tuyệt đối.
++ Bài 920: Tìm độ lệch lớn nhất trên cây. Độ lệch của một nút trong cây được định nghĩa là chiều cao của cây con trái
+  trừ chiều cao cây con phải lấy giá trị tuyệt đối.
 + Bài 921: Tìm địa chỉ nút mà giá trị tại nút đó là giá trị lớn nhất.
 
 ## Chương 14
-+ Bài 922: Cho cây nhị phân T trong đó thông tin tại mỗi nút trong cây biểu diễn
-  các thành phần thông tin của một tỉnh (TINH). Biết rằng một tỉnh gồm
-  những thành phần như sau:
-  - Mã tỉnh: kiểu số nguyên 2 byte.
-  - Tên tỉnh: chuỗi tối đa 30 ký tự.
-  - Dân số: kiểu số nguyên 4 byte.
-  - Diện tích: kiểu số thực.
-    a. Tìm địa chỉ một node mà dân số tại node đó là lớn nhất trong cây.
-    b. Liệt kê các tỉnh trong cây có diện tích lớn hơn 100.000.
-    c. Đếm số lượng node lá có diện tích nhỏ hơn 700 và dân số lớn hơn
-    1.000.000.
-+ Bài 923: Cho cây nhị phân T trong đó thông tin tại mỗi nút trong cây biểu diễn
-      các thành phần thông tin của một độc giả (DOCGIA). Biết rằng một
-      độc giả gồm những thành phần như sau:
+
++ Bài 922: Cho cây nhị phân T trong đó thông tin tại mỗi nút trong cây biểu diễn các thành phần thông tin của một tỉnh (
+  TINH). Biết rằng một tỉnh gồm những thành phần như sau:
+    - Mã tỉnh: kiểu số nguyên 2 byte.
+    - Tên tỉnh: chuỗi tối đa 30 ký tự.
+    - Dân số: kiểu số nguyên 4 byte.
+    - Diện tích: kiểu số thực. a. Tìm địa chỉ một node mà dân số tại node đó là lớn nhất trong cây. b. Liệt kê các tỉnh
+      trong cây có diện tích lớn hơn 100.000. c. Đếm số lượng node lá có diện tích nhỏ hơn 700 và dân số lớn hơn
+      1.000.000.
++ Bài 923: Cho cây nhị phân T trong đó thông tin tại mỗi nút trong cây biểu diễn các thành phần thông tin của một độc
+  giả (DOCGIA). Biết rằng một độc giả gồm những thành phần như sau:
     - Mã độc giả: chuỗi tối đa 5 ký tự.
     - Tên độc giả: chuỗi tối đa 30 ký tự.
     - Địa chỉ: chuỗi tối đa 30 ký tự.
-    - Ngày lập thẻ: kiểu ngày.
-    a. Tìm đại chỉ một node mà độc giả tại node đó là lớn tuổi nhất trong
-    cây.
-    b. Liệt kê các độc giả trong cây sinh sau năm 1975.
-    c. Đếm số lượng node có đủ hai con có ngày lập thẻ trong ngày
-    07/05/2004.
-    d. Tìm kiếm địa chỉ một node trong cây theo mã độc giả. 
-  
+    - Ngày lập thẻ: kiểu ngày. a. Tìm đại chỉ một node mà độc giả tại node đó là lớn tuổi nhất trong cây. b. Liệt kê các
+      độc giả trong cây sinh sau năm 1975. c. Đếm số lượng node có đủ hai con có ngày lập thẻ trong ngày 07/05/2004. d.
+      Tìm kiếm địa chỉ một node trong cây theo mã độc giả.
+
 ## Chương 15
-+ Bài 925: Cho cây nhị phân tìm kiếm T các số thực, hãy cho biết đặc điểm thứ tự
-  các nút được xuất ra trong cây khi duyệt cây theo thứ tự LNR.
-+ Bài 926: Cho cây nhị phân tìm kiếm T các số thực, hãy cho biết đặc điểm thứ tự
-  các nút được xuất ra trong cây khi duyệt cây theo thứ tự RNL.
-+ Bài 927: Cho cây nhị phân tìm kiếm T các số thực, hãy cho biết phải duyệt cây
-  như thế nào để lưu cây trên tệp tin sao cho khi đọc dữ liệu từ tập tin ta
-  sẽ tạo lại cây như ban đầu. 
-+ Bài 928: Tìm cây con có tổng lớn nhất. 
+
++ Bài 925: Cho cây nhị phân tìm kiếm T các số thực, hãy cho biết đặc điểm thứ tự các nút được xuất ra trong cây khi
+  duyệt cây theo thứ tự LNR.
++ Bài 926: Cho cây nhị phân tìm kiếm T các số thực, hãy cho biết đặc điểm thứ tự các nút được xuất ra trong cây khi
+  duyệt cây theo thứ tự RNL.
++ Bài 927: Cho cây nhị phân tìm kiếm T các số thực, hãy cho biết phải duyệt cây như thế nào để lưu cây trên tệp tin sao
+  cho khi đọc dữ liệu từ tập tin ta sẽ tạo lại cây như ban đầu.
++ Bài 928: Tìm cây con có tổng lớn nhất.
 + Bài 929: Hãy tạo cây cân bằng từ danh sách liên kết kép có thứ tự tăng dần.
 
 
