--- a/_posts/2021-11-17-1000-exercise.md
+++ b/_posts/2021-11-17-1000-exercise.md
@@ -1,8 +1,12 @@
 ---
-layout: post title: 1000 bài tập subtitle: hãy cùng tôi làm bài tập của thầy NGUYỄN TẤN TRẦN MING KHANG gh-repo:
-daattali/beautiful-jekyll gh-badge: [star, fork, follow]
+layout: post
+title: 1000 bài tập
+subtitle: hãy cùng tôi làm bài tập của thầy NGUYỄN TẤN TRẦN MING KHANG
+gh-repo: daattali/beautiful-jekyll
+gh-badge: [star, fork, follow]
 tags: [structure-algorithm]
-comments: true author: Peter
+comments: true
+author: Peter
 ---
 
 # Nội dung
