--- a/_posts/2021-11-17-1000-exercise.md
+++ b/_posts/2021-11-17-1000-exercise.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: 1000 bài tập
-subtitle: hãy cùng tôi làm bài tập của thầy NGUYỄN TẤN TRẦN MING KHANG
+subtitle: hãy cùng tôi làm bài tập của thầy NGUYỄN TẤN TRẦN MINH KHANG
 gh-repo: daattali/beautiful-jekyll
 gh-badge: [star, fork, follow]
 tags: [structure-algorithm]
