add ma gia c1 1

--- a/_posts/2021-11-17-1000-exercise C1-1.md
+++ b/_posts/2021-11-17-1000-exercise C1-1.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title: CHƯƠNG 1: Lưu Đồ Thuật Toán
-subtitle: Bài 1: Tính S(n) = 1 + 2 + 3 + ...n.
+title: CHƯƠNG 1 Lưu Đồ Thuật Toán
+subtitle: Bài 1 Tính S(n) = 1 + 2 + 3 + ...n.
 gh-repo: daattali/beautiful-jekyll
 gh-badge: [star, fork, follow]
 tags: [structure-algorithm]
@@ -10,20 +10,18 @@ author: Peter
 ---
 
 # Nội dung
-1. [GIẢI THÍCH BÀI TOÁN](#chương-1)
-2. [MÃ GIẢI](#chương-2)
-3. [THỰC HIỆN CODE](#chương-3)
-4. [CHÚ Ý](#chương-4)
+1. [GIẢI THÍCH BÀI TOÁN](#Giải-thích-bài-toán)
+2. [MÃ GIẢI](#Mã-Giải)
+3. [THỰC HIỆN CODE](#Thực-hiện-code )
+4. [CHÚ Ý](#Chú-ý)
 
 
-## Chương 1
 ###  Giải thích bài toán
 + Tính S(n) = 1 + 2 + 3 + ...n.
 Bài toán yêu cầu tính tổng các số từ 1 cho đến n, n là 1 số nguyên dương không dấu. 
 n có thể từ 0 đến 255.
 
 
-## Chương 2
 ### Mã Giải
 + B1: nhập N là số nguyên không dấu
 + B2: kiểm tra input đầu vào có hợp lệ không , nếu không return 0
@@ -33,15 +31,15 @@ n có thể từ 0 đến 255.
 + B5: Trả về sum.
 
 
-## Chương 3
 ### Thực hiện code 
 
 implementing 
 
-## Chương 4
+
 ### Chú ý
 + Kiển tra đầu vào đúng là số nguyên dương 0 <= N <= 255
 
-Link Go back 1000 excercise : https://nguyenthinhit996.github.io/blog/2021-11-17-1000-exercise/
+
+[LLink Go back 1000 excercise](https://nguyenthinhit996.github.io/blog/2021-11-17-1000-exercise/)
   
 Thanks.
