--- a/_posts/2021-11-17-1000-exercise C1-1.md
+++ b/_posts/2021-11-17-1000-exercise C1-1.md
@@ -16,30 +16,30 @@ author: Peter
 4. [CHÚ Ý](#Chú-ý)
 
 
-###  Giải thích bài toán
-+ Tính S(n) = 1 + 2 + 3 + ...n.
+##  Giải thích bài toán
++ Tính S(n) = 1 + 2 + 3 + ...n.  
 Bài toán yêu cầu tính tổng các số từ 1 cho đến n, n là 1 số nguyên dương không dấu. 
-n có thể từ 0 đến 255.
+n có thể từ 0 đến 255.  
 
 
-### Mã Giải
+## Mã Giải
 + B1: nhập N là số nguyên không dấu
 + B2: kiểm tra input đầu vào có hợp lệ không , nếu không return 0
 + B3: Khởi tạo 1 biến sum = 0;
-+ B4: Cho vòng lặp for biến index từ 1 đến <= N.
-    B4.1 : sum = sum + i 
++ B4: Cho vòng lặp for biến index từ 1 đến <= N.  
+&nbsp;&nbsp;B4.1 : sum = sum + i 
 + B5: Trả về sum.
 
 
-### Thực hiện code 
+## Thực hiện code 
 
 implementing 
 
 
-### Chú ý
+## Chú ý
 + Kiển tra đầu vào đúng là số nguyên dương 0 <= N <= 255
 
 
-[LLink Go back 1000 excercise](https://nguyenthinhit996.github.io/blog/2021-11-17-1000-exercise/)
+[Link Go back 1000 excercise](https://nguyenthinhit996.github.io/blog/2021-11-17-1000-exercise/)
   
 Thanks.
