--- a/_posts/2021-11-17-1000-exercise C1-1.md
+++ b/_posts/2021-11-17-1000-exercise C1-1.md
@@ -10,10 +10,10 @@ author: Peter
 ---
 
 # Nội dung
-1. [GIẢI THÍCH BÀI TOÁN](#Giải-thích-bài-toán)
-2. [MÃ GIẢI](#Mã-Giải)
-3. [THỰC HIỆN CODE](#Thực-hiện-code )
-4. [CHÚ Ý](#Chú-ý)
+1. [GIẢI THÍCH BÀI TOÁN](#giải-thích-bài-toán)
+2. [MÃ GIẢI](#mã-Giải)
+3. [THỰC HIỆN CODE](#thực-hiện-code)
+4. [CHÚ Ý](#chú-ý)
 
 
 ##  Giải thích bài toán
@@ -33,7 +33,13 @@ n có thể từ 0 đến 255.
 
 ## Thực hiện code 
 
-implementing 
+implementing  
+
+```java
+function test() {
+  console.log("notice the blank line before this function?");
+}
+```
 
 
 ## Chú ý
