--- a/_posts/2021-11-17-1000-exercise C1-1.md
+++ b/_posts/2021-11-17-1000-exercise C1-1.md
@@ -36,10 +36,43 @@ n có thể từ 0 đến 255.
 implementing  
 
 ```java
-function test() {
-  console.log("notice the blank line before this function?");
+import java.util.Random;
+
+public class ShareFullCode {
+
+    // function 
+    static int sumN(int n) {
+
+        if (n < 0 || n > 255) {
+            return 0;
+        }
+
+        int sum = 0;
+
+        for (int i = 1; i <= n; i++) {
+            sum = sum + i;
+        }
+
+        return sum;
+    }
+
+    // only for testing dont change it
+    public static void main(String[] args) {
+        Random random = new Random();
+        int n = random.nextInt(255);
+        System.out.println("N: " + n);
+        int result = sumN(n);
+        System.out.println("Total of N:" + result);
+    }
 }
 ```
+Để testing online bạn làm như sau: 
++ B1: Copy all code above.
++ B2: Open page [Test](https://www.tutorialspoint.com/compile_java_online.php) Jdk 1.8
++ B3: Xoá hêt code (toàn bộ class HelloWorld) có trong page. 
++ B4: Paste code vừa copy ở trên vào console của page. 
++ B5: Chọn Execute và show ra kết quả.
+
 
 
 ## Chú ý
