--- a/_posts/2021-11-17-1000-exercise C1-1.md
+++ b/_posts/2021-11-17-1000-exercise C1-1.md
@@ -68,7 +68,7 @@ public class ShareFullCode {
 ```
 Để testing online bạn làm như sau: 
 + B1: Copy all code above.
-+ B2: Open page [Test](https://www.tutorialspoint.com/compile_java_online.php) Jdk 1.8
++ B2: Open page [Test](https://www.tutorialspoint.com/compile_java_online.php){:target="_blank"} Jdk 1.8
 + B3: Xoá hêt code (toàn bộ class HelloWorld) có trong page. 
 + B4: Paste code vừa copy ở trên vào console của page. 
 + B5: Chọn Execute và show ra kết quả.
