--- a/_posts/2021-11-17-1000-exercise C1-2.md
+++ b/_posts/2021-11-17-1000-exercise C1-2.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: CHƯƠNG 1 Lưu Đồ Thuật Toán
-subtitle: Bài 1 Tính S(n) = 1 + 2 + 3 + ...n.
+subtitle: Bài 2 Tính S(n)= 1^2 + 2^2 + 3^2 + ...n2
 gh-repo: daattali/beautiful-jekyll
 gh-badge: [star, fork, follow]
 tags: [structure-algorithm]
@@ -17,8 +17,8 @@ author: Peter
 
 
 ##  Giải thích bài toán
-+ Tính S(n) = 1 + 2 + 3 + ...n.  
-Bài toán yêu cầu tính tổng các số từ 1 cho đến n, n là 1 số nguyên dương không dấu. 
++ Tính S(n)= 1^2 + 2^2 + 3^2 + ...n2
+Bài toán yêu cầu tính tổng các số từ 1 mũ 2 cho đến n mũ 2, n là 1 số nguyên dương không dấu. 
 n có thể từ 0 đến 255.  
 
 
@@ -27,7 +27,7 @@ n có thể từ 0 đến 255.
 + B2: kiểm tra input đầu vào có hợp lệ không , nếu không return 0
 + B3: Khởi tạo 1 biến sum = 0;
 + B4: Cho vòng lặp for biến index từ 1 đến <= N.  
-&nbsp;&nbsp;B4.1 : sum = sum + i 
+&nbsp;&nbsp;B4.1 : sum = sum + (i mũ 2)
 + B5: Trả về sum.
 
 
@@ -37,20 +37,22 @@ implementing
 
 ```java
 import java.util.Random;
+import java.lang.Math;
 
 public class ShareFullCode {
 
     // function
-    static int sumN(int n) {
+    static long sumPow2(int n) {
 
         if (n < 0 || n > 255) {
             return 0;
         }
 
-        int sum = 0;
+        long sum = 0;
 
         for (int i = 1; i <= n; i++) {
-            sum = sum + i;
+            // round number value nearest
+            sum = sum + Math.round(Math.pow(i,2));
         }
 
         return sum;
@@ -61,8 +63,8 @@ public class ShareFullCode {
         Random random = new Random();
         int n = random.nextInt(255);
         System.out.println("N: " + n);
-        int result = sumN(n);
-        System.out.println("Total of N:" + result);
+        long result = sumPow2(n);
+        System.out.println("Total pow 2 of N:" + result);
     }
 }
 ```
