--- a/_posts/2021-11-17-1000-exercise.md
+++ b/_posts/2021-11-17-1000-exercise.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 1000 bài tập
+title: 1000 BÀI TẬP
 subtitle: Hãy cùng tôi làm bài tập của thầy NGUYỄN TẤN TRẦN MINH KHANG
 gh-repo: daattali/beautiful-jekyll
 gh-badge: [star, fork, follow]
@@ -29,7 +29,7 @@ author: Peter
 
 ## Chương 1
 ###  Các bài tập liên quan lưu đồ thuật toán
-+ Bài 1: Tính S(n) = 1 + 2 + 3 + ...n.
++ [Bài 1: Tính S(n) = 1 + 2 + 3 + ...n.](https://nguyenthinhit996.github.io/blog/2021-11-17-1000-exercise-C1-1/){:target="_blank"}
 + Bài 2: Tính S(n)= 1^2 + 2^2 + 3^2 + ...n2
 + Bài 3: Tính S(n)= 1 + ½ + 1/3 + ...1/n.
 + Bài 4: Tính S(n)= ½ + ¼ + ... 1/2n.
